Fix clickable URLs in smalltalk-fixed.html

--- a/smalltalk-fixed.html
+++ b/smalltalk-fixed.html
@@ -74,36 +74,42 @@
                 title: "AI Breakthrough: New Language Model Achieves Human-Level Reasoning",
                 description: "Researchers unveil a groundbreaking AI system that demonstrates unprecedented reasoning capabilities.",
                 source: "Tech Insider",
+                url: "https://news.ycombinator.com/",
                 date: today
             },
             {
                 title: "Quantum Computing Reaches New Milestone with 1000-Qubit Processor",
                 description: "Major tech company announces successful development of a 1000-qubit quantum processor.",
                 source: "Science Daily",
+                url: "https://www.sciencedaily.com/news/computers_math/quantum_computers/",
                 date: today
             },
             {
                 title: "Sustainable Tech: Solar Panels Now 50% More Efficient",
                 description: "Breakthrough in photovoltaic technology promises to dramatically reduce the cost of solar energy.",
                 source: "Green Tech News",
+                url: "https://techcrunch.com/category/green/",
                 date: today
             },
             {
                 title: "New Programming Language Simplifies Concurrent Computing",
                 description: "Developers release innovative language that makes parallel programming accessible to mainstream developers.",
                 source: "Dev Community",
+                url: "https://dev.to/",
                 date: today
             },
             {
                 title: "Breakthrough in Edge Computing Enables Real-Time AI on Devices",
                 description: "New chip architecture allows complex AI models to run directly on smartphones and IoT devices.",
                 source: "Hardware Weekly",
+                url: "https://www.theverge.com/tech",
                 date: today
             },
             {
                 title: "Open Source Project Hits 1 Million Contributors Worldwide",
                 description: "Popular open-source initiative celebrates milestone with contributors from every country.",
                 source: "Open Source Daily",
+                url: "https://github.com/trending",
                 date: today
             }
         ];
@@ -113,13 +119,14 @@
     function displayNews(articles) {
         const container = document.getElementById('techNewsCards');
         container.innerHTML = articles.map(article => `
-            <div class="news-card">
+            <div class="news-card" onclick="window.open('${article.url}', '_blank')" style="cursor: pointer;">
                 <h3>${article.title}</h3>
                 <p>${article.description}</p>
                 <div class="news-meta">
                     <span class="news-source">${article.source}</span>
                     <span class="news-date">${article.date}</span>
                 </div>
+                <div style="margin-top: 0.5rem; font-size: 0.8rem; color: #3498db;">🔗 Click to read more</div>
             </div>
         `).join('');
     }
